Daily_Data Inclusion
Inludes filled up Air Quality and Google data, put together in the Daily Data notebook

--- a/models/processing/USA/County_Based/County_Merged.ipynb
+++ b/models/processing/USA/County_Based/County_Merged.ipynb
@@ -2,16 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import os\n",
-    "#Data with Dates is given in consecutive & nonconsecutive forms \n",
-    "#(multiple factors per date or all dates of each factor, sequentially)"
+    "import os\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import git\n",
+    "import sys\n",
+    "repo = git.Repo(\"./\", search_parent_directories=True)\n",
+    "homedir = repo.working_dir"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
