--- a/models/processing/USA/County_Based/Demographics_County.ipynb
+++ b/models/processing/USA/County_Based/Demographics_County.ipynb
@@ -17,24 +17,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import git\n",
+    "import sys\n",
+    "repo = git.Repo(\"./\", search_parent_directories=True)\n",
+    "homedir = repo.working_dir"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#Loading in County Data\n",
     "#Datasets that are altered & Resaved as such\n",
-    "Age_Race = pd.read_csv('../../../../data/us/demographics/acs_2018.csv', encoding='latin1')\n",
-    "Votes = pd.read_csv('../../../../data/us/demographics/countypres_2000-2016.csv', encoding='latin1')\n",
-    "Educ = pd.read_csv('../../../../data/us/demographics/education.csv', encoding='latin1')\n",
-    "Density = pd.read_csv('../../../../data/us/demographics/county_land_areas.csv', encoding='latin1')\n",
-    "Unemp = pd.read_csv('../../../../data/us/demographics/unemployment.csv', delimiter=\"\\t\")\n",
-    "Poverty = pd.read_csv('../../../../data/us/demographics/poverty.csv', delimiter=\"\\t\")\n",
+    "Age_Race = pd.read_csv(f\"{homedir}/data/us/demographics/acs_2018.csv\", encoding='latin1')\n",
+    "Votes = pd.read_csv(f\"{homedir}/data/us/demographics/countypres_2000-2016.csv\", encoding='latin1')\n",
+    "Educ = pd.read_csv(f\"{homedir}/data/us/demographics/education.csv\", encoding='latin1')\n",
+    "Density = pd.read_csv(f\"{homedir}/data/us/demographics/county_land_areas.csv\", encoding='latin1')\n",
+    "Unemp = pd.read_csv(f\"{homedir}/data/us/demographics/unemployment.csv\", delimiter=\"\\t\")\n",
+    "Poverty = pd.read_csv(f\"{homedir}/data/us/demographics/poverty.csv\", delimiter=\"\\t\")\n",
     "\n",
     "#Key to map FIPs values to State and County Name\n",
-    "Key = pd.read_csv('../../../../data/us/processing_data/fips_key.csv', encoding='latin1')\n",
+    "Key = pd.read_csv(f\"{homedir}/data/us/processing_data/fips_key.csv\", encoding='latin1')\n",
     "Key = Key.drop(columns=['MSA/PMSA NECMA']) #Dropping unecessary column\n",
     "Key = Key.set_index('FIPS')\n",
     "\n",
     "Key.to_csv('Key.csv')\n",
     "\n",
     "#Datasets that are not altered\n",
-    "Pop_60 = pd.read_csv('../../../../data/us/demographics/county_populations.csv', encoding='latin1')\n",
+    "Pop_60 = pd.read_csv(f\"{homedir}/data/us/demographics/county_populations.csv\", encoding='latin1')\n",
     "Pop_60 = Pop_60.set_index('FIPS')\n",
     "\n",
     "Pop_60.to_csv('Pop_60.csv')"
@@ -42,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +374,7 @@
        "1009       0.123719       0.084258  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -670,7 +682,7 @@
        "[5 rows x 73 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -681,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -852,7 +864,7 @@
        "1009                                               12.6              "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -863,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -966,7 +978,7 @@
        "1009                                               37.0          "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -977,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1123,7 +1135,7 @@
        "1009                                      101.1  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1134,7 +1146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1383,7 +1395,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1394,7 +1406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1467,7 +1479,7 @@
        "1009  AL   Blount County"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
