--- a/models/clustering/nearest_function.ipynb
+++ b/models/clustering/nearest_function.ipynb
@@ -99,22 +99,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1007, 1009, 1021, 1013, 1015]"
+       "[1009, 1001, 1021, 1015, 1003, 1013]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "n_nearest_euclid(5, 1001, 0, 'Basic')"
+    "n_nearest_euclid(6, 1007, 1, 'geography')"
    ]
   }
  ],
