My attempt at gaussian process

--- a/models/gaussian/prototype_v2.ipynb
+++ b/models/gaussian/prototype_v2.ipynb
@@ -1,13 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Models used from https://github.com/fonnesbeck/gp_regression/blob/master/notebooks/spawning_salmon.ipynb\n",
+    "#### Hope this is ok, asked on Piazza"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# packages for PyMC3 fitting, from https://github.com/fonnesbeck/gp_regression/blob/master/notebooks/spawning_salmon.ipynb\n",
-    "\n",
+    "# packages for PyMC3 fitting\n",
     "import os\n",
     "\n",
     "%matplotlib inline\n",
@@ -17,6 +24,9 @@
     "import arviz as az\n",
     "import theano.tensor as tt\n",
     "import matplotlib.pyplot as plt\n",
+    "from theano import function\n",
+    "from theano.tensor import _shared\n",
+    "from scipy import special\n",
     "\n",
     "import warnings\n",
     "warnings.simplefilter('ignore')\n",
@@ -27,7 +37,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Quadratic(pm.gp.mean.Mean):\n",
+    "    # custom mean of a quadratic, assuming max deaths already passed which is reasonable\n",
+    "    def __init__(self, t_0, t_max, max_val):\n",
+    "        #Mean.__init__(self)\n",
+    "        t_delta = t_max - t_0\n",
+    "        self.a = -1 * max_val / (t_delta ** 2)\n",
+    "        self.b = 2 * max_val / t_delta\n",
+    "\n",
+    "    def __call__(self, X):\n",
+    "        X = _shared(X)\n",
+    "        for i in range(0, X.shape[0].eval()):\n",
+    "            X = tt.set_subtensor(X[i], self.a * X[i].eval()**2 + self.b * X[i].eval() )\n",
+    "        return X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ERF(pm.gp.mean.Mean):\n",
+    "    # custom mean of an ERF\n",
+    "    def __init__(self, t_0, t_max, max_val):\n",
+    "        #Mean.__init__(self)\n",
+    "        self.m = 6.0 / (t_max - t_0)\n",
+    "        self.b = 3.0 * (t_0 + t_max) / (t_0 - t_max)\n",
+    "        self.c = max_val\n",
+    "\n",
+    "    def __call__(self, X):\n",
+    "        X = _shared(X)\n",
+    "        for i in range(0, X.shape[0].eval()):\n",
+    "            X = tt.set_subtensor(X[i], special.erf([X[i].eval() * self.m + self.b])[0])\n",
+    "        return X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_vals(df):\n",
+    "    t_0 = 0\n",
+    "    for i in range(0, len(df)):\n",
+    "        if df."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +164,7 @@
        "4  53061     0.0             4.0"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -176,25 +240,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13.0\n"
+     ]
+    }
+   ],
    "source": [
-    "with pm.Model() as gaussian_model:\n",
-    "\n",
-    "    # Lengthscale\n",
-    "    ρ = pm.HalfCauchy('ρ', 5)\n",
-    "    η = pm.HalfCauchy('η', 5)\n",
-    "    \n",
-    "    M = pm.gp.mean.Linear(coeffs=(salmon_data.recruits/salmon_data.spawners).mean())\n",
-    "    K = (η**2) * pm.gp.cov.ExpQuad(1, ρ) \n",
-    "    \n",
-    "    σ = pm.HalfNormal('σ', 50)\n",
-    "    \n",
-    "    recruit_gp = pm.gp.Marginal(mean_func=M, cov_func=K)\n",
-    "    recruit_gp.marginal_likelihood('recruits', X=salmon_data.spawners.values.reshape(-1,1), \n",
-    "                           y=salmon_data.recruits.values, noise=σ)\n",
-    "    "
+    "print(test_data.date[13])"
    ]
   },
   {
@@ -203,6 +261,37 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with pm.Model() as covid_model:\n",
+    "    \n",
+    "    M = pm.gp.mean.Linear(coeffs=(test_data.deaths/test_data.date).mean())\n",
+    "    \n",
+    "    ρ = pm.HalfCauchy('ρ', test_data.deaths.max() / 5)\n",
+    "    μ = pm.HalfCauchy('μ', 3)\n",
+    "    K = (μ**2) * pm.gp.cov.ExpQuad(1, ρ) \n",
+    "    σ = pm.Normal('σ', test_data.deaths.max() / 10)\n",
+    "    \n",
+    "    recruit_gp = pm.gp.Marginal(mean_func=M, cov_func=K)\n",
+    "    recruit_gp.marginal_likelihood('deaths', X=test_data.date.values.reshape(-1,1), \n",
+    "                           y=test_data.deaths.values, noise=σ)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with covid_model:\n",
+    "    gp_trace = pm.sample(1000, tune=2000)"
+   ]
   },
   {
    "cell_type": "code",
